--- a/apps/forum_core/templates/forum.html
+++ b/apps/forum_core/templates/forum.html
@@ -88,25 +88,11 @@ height: auto
 <div class="container">
 <div class="row">
     <div class="col">
-        <h2>Best Topic</h2>
-        <h6>WebPres_core</h6>
-        <h6>WebPres_core</h6>
-        <h6>WebPres_core</h6>
-        <h6>WebPres_core</h6>
-        <h6>WebPres_core</h6>
-        <h6>WebPres_core</h6>
-    <br>
-        <h2>Best Solved</h2>
-        <h6>WebPres_core</h6>
-        <h6>WebPres_core</h6>
-        <h6>WebPres_core</h6>
-        <h6>WebPres_core</h6>
-        <h6>WebPres_core</h6>
-        <h6>WebPres_core</h6>
+        <!---Topic Here--->
     </div>
     {% for post in posts %}
     <div class="col-5">
-        <h3>WebPres Community.<button class="btn btn-dark btn-sm" data-target="#questions" data-toggle="modal" role="button">Add Post</button></h3>
+        <h3 class="text-white">WebPres Community.<button class="btn btn-dark btn-sm" data-target="#questions" data-toggle="modal" role="button">Add Post</button></h3>
               <div class="card mb-4">
                   <div class="media flex-wrap w-100 align-items-center"> <img src="/media/{{post.image}}"
                               class="d-block ui-w-40 rounded-circle" alt="">
@@ -156,21 +142,7 @@ height: auto
 
     <div class="col">
          <div class="col">
-                <h2>Best Topic</h2>
-                <h6>WebPres_core</h6>
-                <h6>WebPres_core</h6>
-                <h6>WebPres_core</h6>
-                <h6>WebPres_core</h6>
-                <h6>WebPres_core</h6>
-                <h6>WebPres_core</h6>
-            <br>
-                <h2>Best Solved</h2>
-                <h6>WebPres_core</h6>
-                <h6>WebPres_core</h6>
-                <h6>WebPres_core</h6>
-                <h6>WebPres_core</h6>
-                <h6>WebPres_core</h6>
-                <h6>WebPres_core</h6>
+             <!---Topic Here--->
             </div>
          </div>
     </div>
